[project]
name = "pge-to-cospend"
version = "0.1.0"
description = "Sync PG&E electric bills to Nextcloud Cospend"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9",
    "gspread>=6.0",
    "opower>=0.8",
    "requests>=2.31",
    "sentry-sdk>=2.59.0",
]

[project.scripts]
pge-to-cospend = "pge_to_cospend:main"
ev-charger-to-cospend = "ev_charger_to_cospend:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "hypothesis>=6.0",
    "pytest>=8.0",
    "requests-mock>=1.11",
]
